[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/sfx/select2.ogg" type="AudioStream" id=2]

[node name="MainMenu" type="Control"]
margin_right = 1440.0
margin_bottom = 840.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 164.0
margin_right = 6.0
margin_bottom = 256.0
rect_scale = Vector2( 2, 2 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit")
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 150.0
margin_bottom = 44.0
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 150.0
margin_bottom = 68.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 150.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="select2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.66

[connection signal="focus_entered" from="VBoxContainer/Start" to="." method="_on_Start_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Options" to="." method="_on_Options_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Credits" to="." method="_on_Credits_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="focus_entered" from="VBoxContainer/Quit" to="." method="_on_Quit_focus_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
